@@ -74,9 +74,6 @@ Print information about D language processing to stdout.
 .IP "\fB-fproperty\fR" 4
 .IX Item "-fproperty"
 For D2, enforce @property syntax.
-.IP "\fB-fd-version=1\fR" 4
-.IX Item "-fd-version=1"
-Compile as D language version 1.
 .IP "\fB-fd-vtls\fR" 4
 .IX Item "-fd-vtls"
 List all variables going into thread local storage.
